# telegram-trading-bot

./: README.md  queue.yaml
service_default/: .gcloudignore  app.yaml  deploy.sh  env_variables.py  main.py  pyproject.toml  requirements.sh  requirements.txt
service_default/hsbot/: bot_handlers.py  helpers.py  local_db.json  persistence_layer.py  sol.py  ui_layout.py  utils.py
service_default/hsbot/routers/: bot_webhook.py  worker.py
service_default/hsbot/services/: coinbase.py  gcp_secrets.py  helius.py  jupiter.py  meteora_dlmm.py  shyft.py  sol_client.py  tasks.py
